fix: Fix display of heading in latestNewsBar on mobile devices

--- a/client/src/components/latestNewsBar/index.scss
+++ b/client/src/components/latestNewsBar/index.scss
@@ -78,12 +78,9 @@ article{
     }
 
     @media (max-width: 1180px){
-        div{
-            width: 70%;
-
-            a{
-                width: 100%;
-            }
+        h1{
+            margin-bottom: 0;
+            padding-bottom: 0 !important;
         }
     }
 
